# QuickEd

./: CMakeLists.txt  README.md  pyproject.toml
bindings/: CMakeLists.txt
bindings/python/: README.md  quicked.cpp
quicked/src/: bpm_banded.c
